--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Install
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: "1.20"
       - name: Checkout
         uses: actions/checkout@v3
       - name: MongoDB
